Ingress/app_routing/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: netflix-devployment-svc
  namespace: app-store
spec:
  ports:
  - port: 9008
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
